format debug json

--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -117,7 +117,7 @@ jobs:
               `,
               { issueId: context.payload.issue.node_id, projectField: securityProjectJiraField }
             )
-            console.log(`projectFields: ${projectFields}`)
+            console.log(JSON.stringify(${projectFields}))
             let securityTicket = ''
             let securityProjectID = ''
             let securityProjectJiraFieldID = ''
