--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -94,6 +94,7 @@ jobs:
                     title
                     projectItems(first: 10) {
                       nodes {
+                        id
                         project {
                           id
                           title
@@ -120,6 +121,7 @@ jobs:
             
             console.log(JSON.stringify(projectFields))
             let securityTicket = ''
+            let securityProjectItemID = ''
             let securityProjectID = ''
             let securityProjectJiraFieldID = ''
             const securityProject = projectFields.node.projectItems.nodes.find(pi => pi.project.title === securityProjectName)
@@ -127,6 +129,7 @@ jobs:
               if (securityProject.fieldValueByName !== null) {
                 securityTicket = securityProject.fieldValueByName.text
               }
+              securityProjectItemID = securityProject.id
               securityProjectID = securityProject.project.id
               securityProjectJiraFieldID = securityProject.project.field.id
             }
@@ -150,7 +153,7 @@ jobs:
                 }
               }
               `,
-              { project: securityProjectID, item: context.payload.issue.node_id, field: securityProjectJiraFieldID, field_value: jiraSecurityTicket }
+              { project: securityProjectID, item: securityProjectItemID, field: securityProjectJiraFieldID, field_value: jiraSecurityTicket }
             )
 
       - name: Attach all tickets with label Area:QA to the Security Roadmap Project
