--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -135,7 +135,7 @@ jobs:
             }
             
             // Initialize Jira connection
-            const jira = new JiraApi({
+            const jira = new jiraApi({
               protocol: 'https',
               host: 'jira.jahia.org',
               username: '${{ secrets.JIRA_USERNAME }}',
