Update affect version section

--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -155,8 +155,14 @@ jobs:
                 },
                 "summary": issueSummary,
                 "description": issueDescription,
-                "affectedVersions:" : ["name": "8.2.0.0"],
-                "issuetype": {
+                "affectedVersions": 
+                [
+                  {
+                    "name": "8.2.0.0"
+                  }
+                ],
+                "issuetype": 
+                {
                     "name": "Bug"
                 }
               }
