Try another context

--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -191,8 +191,8 @@ jobs:
               
               await github.rest.issues.createComment({
                 issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.name,
+                owner: "${{ github.repository_owner }}",
+                repo: "${{ github.repository }}",
                 body: `A copy of this ticket has been created: https://${ jiraHost }/browse/${ issue.key }.`
               });
             }
