--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -193,7 +193,7 @@ jobs:
                 issue_number: context.issue.number,
                 owner: "${{ github.repository_owner }}",
                 repo: "${{ github.event.repository.name }}",
-                body: `A copy of this ticket has been created: https://${ jiraHost }/browse/${ issue.key }.`
+                body: `A copy of this ticket has been created: [${ issue.key }](https://${ jiraHost }/browse/${ issue.key }).`
               });
             }
 
