Move the steps into a dedicated action

--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -77,133 +77,11 @@ jobs:
 
       - run: npm install jira-client
 
-      - name: Check if a Security Jira ticket is already linked, create it if not
-        uses: actions/github-script@v7
+      - name: Create a Security Jira ticket
+        uses: ./.github/actions/create-security-ticket
         with:
-          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
-          result-encoding: string
-          retries: 3
-          script: |
-            const jiraApi = require('jira-client');
-            
-            const jiraHost = 'jira.jahia.org'
-            const jiraProject = 'SECBACKLOG'
-            const securityProjectJiraField = 'Jira tickets'
-            const securityProjectName = 'Area - Security'
-            const projectFields = await github.graphql(`
-              query issue($issueId: ID! $projectField: String! $fieldName: String!) {
-                node(id: $issueId) {
-                  ... on Issue {
-                    title
-                    projectItems(first: 10) {
-                      nodes {
-                        id
-                        project {
-                          id
-                          title
-                          field(name: $fieldName) {
-                            ... on ProjectV2Field {
-                              id
-                              name
-                            }
-                          }
-                        }
-                        fieldValueByName(name: $projectField) {
-                          ... on ProjectV2ItemFieldTextValue {
-                            text
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-              `,
-              { issueId: context.payload.issue.node_id, projectField: securityProjectJiraField, fieldName: securityProjectJiraField }
-            )
-            
-            let securityTicket = ''
-            let securityProjectItemID = ''
-            let securityProjectID = ''
-            let securityProjectJiraFieldID = ''
-            const securityProject = projectFields.node.projectItems.nodes.find(pi => pi.project.title === securityProjectName)
-            if (securityProject !== undefined) {
-              if (securityProject.fieldValueByName !== null) {
-                const tickets = securityProject.fieldValueByName.text.split(',')
-                for(let t = 0; t < tickets.length; t++){
-                  if (tickets[t].startsWith(jiraProject)) {
-                    securityTicket = tickets[t]
-                  }
-                }
-                console.log('Security ticket found: ' + JSON.stringify(securityTicket))
-              }
-              securityProjectItemID = securityProject.id
-              securityProjectID = securityProject.project.id
-              securityProjectJiraFieldID = securityProject.project.field.id
-            }
-            
-            if (securityTicket === '') {
-              // Initialize Jira connection
-              const jira = new jiraApi({
-                protocol: 'https',
-                host: jiraHost,
-                username: '${{ secrets.JIRA_USERNAME }}',
-                password: '${{ secrets.JIRA_PASSWORD }}',
-                apiVersion: '2',
-                strictSSL: true
-              })
-
-              const issueSummary = '[Product] ' + "${{ github.event.issue.title }}" + ' (#' + "${{ github.event.issue.number }}" + ')'
-              const issueBody = "${{ github.event.issue.body }}";
-
-              // Remove the version when moving to the support Jira
-              const issue = await jira.addNewIssue({
-                fields: {
-                  "project":
-                  {
-                      "key": jiraProject
-                  },
-                  "summary": issueSummary,
-                  "description": issueBody,
-                  "versions": 
-                  [
-                    {
-                      "name": "8.2.0.0"
-                    }
-                  ],
-                  "issuetype": 
-                  {
-                      "name": "Bug"
-                  }
-                }
-              });
-              
-              await github.graphql(`
-                mutation ($project: ID! $item: ID! $field: ID! $field_value: String!) {
-                  updateProjectV2ItemFieldValue(input: {
-                    projectId: $project
-                    itemId: $item
-                    fieldId: $field
-                    value: {
-                      text: $field_value
-                    }
-                  }) {
-                    projectV2Item {
-                      id
-                    }
-                  }
-                }
-                `,
-                { project: securityProjectID, item: securityProjectItemID, field: securityProjectJiraFieldID, field_value: issue.key }
-              )
-              
-              await github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: "${{ github.repository_owner }}",
-                repo: "${{ github.event.repository.name }}",
-                body: `A copy of this ticket has been created: [${ issue.key }](https://${ jiraHost }/browse/${ issue.key }).`
-              });
-            }
+          jira-host: 'jira.jahia.org'
+          jira-project: 'SECBACKLOG'
 
       - name: Attach all tickets with label Area:QA to the Security Roadmap Project
         uses: actions/add-to-project@v1.0.2
