Add condition for the security ticket creation

--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -79,6 +79,7 @@ jobs:
 
       - name: Create a Security Jira ticket
         uses: ./.github/actions/create-security-ticket
+        if: ${{ steps.new-security-incident.outputs.itemId != '' }}
         with:
           jira-host: 'jira.jahia.org'
           jira-project: 'SECBACKLOG'
