--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -94,6 +94,25 @@ jobs:
 
   transfer:
     name: Transfer
+    runs-on: ubuntu-latest
+    needs: projects
+    steps:
+      # Transfer issues with label "jahia-only" back to jahia-private
+      - name: Transfer Issue & Create Stub
+        uses: lando/transfer-issue-action@v2
+        with:
+          token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}        
+          router: jahia-only:jahia-private      
+      - name: Update Transferred Issue
+        uses: actions/github-script@v5
+        if: steps.transfer-issue.outputs.new_issue_number != ''
+        with:
+          script: |
+            await github.rest.issues.createComment({
+              issue_number: `${{ steps.transfer-issue.outputs.new_issue_number}}`,
+              owner: context.repo.owner,
+              repo: `${{ steps.transfer-issue.outputs.destinatiom_repo }}`,
+              body: `@${ context.payload.issue.user.login } your issues was moved back to jahia/jahia-private since it contained the jahia-only label!`
             });
 
       # Transfer issues between repositories of the Jahia org
@@ -103,25 +122,6 @@ jobs:
           token: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
           router: "transfer:"
           allow_private_public_transfer: true
-
-  links:
-    name: Links
-              owner: context.repo.owner,
-              repo: `${{ steps.transfer-issue.outputs.destinatiom_repo }}`,
-              body: `@${ context.payload.issue.user.login } your issues was moved back to jahia/jahia-private since it contained the jahia-only label!`
-            });
-
-      # Transfer issues between repositories of the Jahia org
-      # Note: Pending review/merge of this PR: https://github.com/lando/transfer-issue-action/pull/97
-      # Will update once PR is merged.
-      - name: Transfer Issue & Create Stub
-        uses: Fgerthoffert/transfer-issue-action@v1.0.0
-        with:
-          token: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
-          router: "transfer:"
-          create_labels_if_missing: true
-          allow_private_public_transfer: true
-          enable_custom_label_routing: true
 
   links:
     name: Links
